deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nuedigitalmlapi
  name: nuedigitalmlapi
spec:
  ports:
    - name: nuedigitalmlapi
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: nuedigitalmlapi
  type: ClusterIP
