deployment/route.yml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: nuedigitalmlapi
  name: nuedigitalmlapi
spec:
  path: /
  port:
    targetPort: nuedigitalmlapi
  to:
    kind: Service
    name: nuedigitalmlapi
